Fixed side nav text alignment

--- a/app/themes/mcc-cycling/assets/less/partials/main-nav.less
+++ b/app/themes/mcc-cycling/assets/less/partials/main-nav.less
@@ -47,6 +47,7 @@ body {
     -o-transition: all @sideNavTime ease-in-out;
     transition: all @sideNavTime ease-in-out;
     transition: all @sideNavTime ease-in-out;
+    text-align: left;
     z-index: 99;
 
     & > section {
